<resources>
    <string name="app_name">共享挖掘机</string>
    <string name="app_name_user">共享挖掘机_用户端</string>
    <string name="app_name_sharer">共享挖掘机_车主端</string>
	<string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
	<string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="app_contentDescription">demo</string>
    <string name="mshell_rcv_item_description">模块图片</string>
    <string name="image_contentDescription">各模块图片</string>
    <string name="login_validate">获取验证码</string>
    <string name="login_username">请输入手机号</string>
    <string name="login_password">请输入验证码</string>
    <string name="login">登    录</string>
    <string name="login_register">立即申请</string>
    <string name="login_number">详情致电133-7887-5566</string>
    <string name="login_cancal">取消</string>
    <string name="tip">提示</string>
    <string name="cancel">注销</string>
    <string name="register_username">姓名</string>
    <string name="register_password">账号</string>
    <string name="register_et_username">请输入您的姓名</string>
    <string name="register_et_password">请输入您的手机号</string>
    <string name="register_explain">您是否了解戒毒康复治疗?</string>
    <string name="register">立即注册</string>
    <string name="unlisted_update">检查更新</string>
    <string name="unlisted_aboutus">关于我们</string>
    <string name="unlisted_msg">我的消息</string>
    <string name="unlisted_suggest">用户建议</string>
    <string name="suggest_sgt">提交建议</string>
    <string name="suggest_tip">请在此输入您的建议</string>
    <string name="inform_guardian">监护人</string>
    <string name="inform_contacts">联系方式</string>
    <string name="modify_finish">完成</string>
    <string name="modify_photograph">拍照</string>
    <string name="modify_selectalbum">从相册选择照片</string>
    <string name="information_exit">您确定要退出当前账号吗?</string>
    <string name="push_msginfo">消息详情</string>
    <string name="pull_to_refresh_footer_release_label">上拉加载</string>
    <string name="pull_to_refresh_footer_pull_label">加载成功</string>
    <string name="pull_to_refresh_footer_refreshing_label">正在加载...</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_refreshing_label">正在刷新...</string>
    <string name="pull_to_refresh_release_label">刷新成功</string>
    <string name="mnews_hotspot">热点</string>
	 <string name="about_term">        欢迎您使用本软件！\n\n
         \0  \0  \0  \0  \0  \0  \0 \0使用前，请您务必审慎阅读、充分理解各条款内容，特别是免除或者限制责任的条款，并选择接受或不接受。\n\n
		 \0  \0  \0  \0 \0  \0  \0  \0除非您已阅读并接受本协议所有条款，否则您无权下载、安装或使用本软件及相关服务。\n\n
		 \0  \0  \0  \0 \0  \0  \0  \0如果您未满18周岁，请在法定监护人的陪同下阅读本协议及其他上述协议，并特别注意未成年人使用条款。\n\n
        一、【协议的范围】\n\n
		 \0  \0  \0  \0 \0  \0  \0  \0本协议是您下载、安装、使用、复制本软件所订立的协议。\n本服务内容是指向用户提供的跨平台的通讯工具、支持多人参与，发送语音、图片和文字等即时通讯服务。\n\n
        二、【软件的获取】\n\n
		 \0  \0  \0  \0 \0  \0  \0  \0如果您从未经授权的第三方获取本软件或与本软件名称相同的安装程序，我们无法保证该软件能够正常使用，并对因此给您造成的损失不予负责。\n\n
        三、【更新】\n\n
		 \0  \0  \0  \0 \0  \0  \0  \0本软件新版本发布后，旧版本的软件可能无法使用。我们不保证旧版本软件继续可用及相应的客户服务，请您随时核对并下载最新版本。\n\n
	四、【个人信息保护】\n\n
		 \0  \0  \0  \0 \0  \0  \0  \0您在注册帐号或使用本服务的过程中，需要提供一些必要的信息，例如：手机号码、地理位置信息。若您提供的信息不完整，则无法使用本服务或在使用过程中受到限制。\n
		 \0  \0  \0  \0 \0  \0  \0  \0未经您的同意，我们不会向以外的任何公司、组织和个人披露您的个人信息，但法律法规另有规定的除外。\n\n
	五、【信息内容规范】\n\n
		 \0  \0  \0  \0 \0  \0  \0  \0本条所述信息内容是指用户使用本软件及服务过程中所制作、复制、发布、传播的任何内容。\n
		 \0  \0  \0  \0 \0  \0  \0  \0您不得利用本软件及服务制作、复制、发布、传播如下干扰正常运营，以及侵犯其他用户或第三方合法权益的内容，包括但不限于：\n
		 \0  \0  \0  \0 \0  \0  \0  \0发布、传送、传播、储存违反国家法律法规禁止的内容：\n\n
		 \0 \0 （1）违反宪法确定的基本原则的；\n
		 \0 \0 （2）危害国家安全，泄露国家秘密，颠覆国家政权，破坏国家统一的；\n
		 \0 \0 （3）损害国家荣誉和利益的；\n
		 \0 \0 （4）煽动民族仇恨、民族歧视，破坏民族团结的；\n
		 \0 \0 （5）破坏国家宗教政策，宣扬邪教和封建迷信的；\n
		 \0 \0 （6）散布谣言，扰乱社会秩序，破坏社会稳定的；\n
		 \0 \0 （7）散布淫秽、色情、赌博、暴力、恐怖或者教唆犯罪的；\n
		 \0 \0 （8）侮辱或者诽谤他人，侵害他人合法权益的；\n
		 \0 \0 （9）煽动非法集会、结社、游行、示威、聚众扰乱社会秩序；\n
		 \0 \0 （10）以非法民间组织名义活动的；\n
		 \0 \0 （11）含有法律、行政法规禁止的其他内容的。\n
		 \0 \0 （12）发布、传送、传播、储存侵害他人名誉权、肖像权、知识产权、商业秘密等合法权利的内容；\n
		 \0 \0 （13）涉及他人隐私、个人信息或资料的；\n
		 \0 \0 （14）发表、传送、传播骚扰、广告信息及垃圾信息或含有任何性或性暗示的；\n\n
	六、【对自己行为负责】\n\n
		 \0  \0  \0  \0 \0  \0  \0  \0您充分了解并同意，您必须为自己帐号下的一切行为负责，包括您所发表的任何内容以及由此产生的任何后果。您应对本服务中的内容自行加以判断，并承担因使用内容而引起的所有风险，包括因对内容的正确性、完整性或实用性的依赖而产生的风险。我们无法且不会对因前述风险而导致的任何损失或损害承担责任。\n\n
	七、【违约处理】\n\n
		 \0  \0  \0  \0 \0  \0  \0  \0如果发现或收到他人举报或投诉用户违反本协议约定的，我们有权不经通知随时对相关内容进行删除、屏蔽，并视行为情节对违规帐号处以包括但不限于警告、限制或禁止使用部分或全部功能、帐号封禁直至注销的处罚，并公告处理结果。\n\n
	</string>
</resources>