<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    style="@style/Login_AlertDialog"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tip"
        android:textSize="@dimen/sp15"
        android:textColor="@color/block"
        android:gravity="center"
        android:layout_marginTop="@dimen/dp15"
       android:layout_marginBottom="@dimen/dp18"
        android:textStyle="bold"
        />
    <View
        android:layout_marginLeft="@dimen/dp5"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp1"
        android:background="@drawable/global_edittext_bg"
        android:layout_marginRight="@dimen/dp5"
        />
    <TextView
        android:id="@+id/number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp8"
        android:textColor="@color/global_top_bar"
        android:text="@string/login_number"
        android:gravity="center"
        />
    <View
        android:layout_marginLeft="@dimen/dp5"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp1"
        android:background="@drawable/global_edittext_bg"
        android:layout_marginRight="@dimen/dp5"
        />
    <TextView
        android:id="@+id/numberCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp10"
        android:textColor="@color/global_top_bar"
        android:text="@string/login_cancal"
        android:gravity="center"
        android:textStyle="bold"
        />
</LinearLayout>
