<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/mmain_login_numdlg">

    <com.hbbc.util.MyTopbar
        android:id="@+id/register_include"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp48"
        app:topbar_left_img="@drawable/global_back"
        app:topbar_left_img_height="@dimen/dp23"
        app:topbar_left_img_width="@dimen/dp25"
        app:topbar_marginleft_leftimg="@dimen/dp8"
        app:topbar_right_visible="gone"
        app:topbar_title_color="@color/white"
        app:topbar_title_size="@dimen/sp11"
    />
    <LinearLayout
        android:id="@+id/mshell_register_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_include"
        android:layout_marginTop="@dimen/dp26"
        android:orientation="vertical">
        <TextView
            android:id="@+id/register_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp8"
            android:text="@string/register_username"
            android:textColor="@color/global_tv_un"
            android:textSize="@dimen/sp15"/>
        <EditText
            android:id="@+id/register_et_username"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp45"
            android:layout_marginLeft="@dimen/dp8"
            android:layout_marginRight="@dimen/dp8"
            android:layout_marginTop="@dimen/dp1"
            android:background="@drawable/mmain_register_etbg"
            android:hint="  请输入您的姓名"
            android:inputType="text"
            android:paddingLeft="@dimen/dp3"

        />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/mshell_register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mshell_register_username"
        android:layout_marginTop="@dimen/dp20"
        android:orientation="vertical">
        <TextView
            android:id="@+id/register_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp8"
            android:text="@string/register_password"
            android:textColor="@color/global_tv_un"
            android:textSize="@dimen/sp15"
        />
        <EditText
            android:id="@+id/register_et_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp45"
            android:layout_marginLeft="@dimen/dp8"
            android:layout_marginRight="@dimen/dp8"
            android:layout_marginTop="@dimen/dp1"
            android:background="@drawable/mmain_register_etbg"
            android:hint="  请输入您的手机号"
            android:inputType="phone"
            android:paddingLeft="@dimen/dp3"
        />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mshell_register_issure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mshell_register_password"
        android:layout_marginTop="@dimen/dp20"
        android:orientation="horizontal">
        <Button
            android:id="@+id/register_btn_sure"
            style="@style/LoginButtonThemeC"
            android:layout_width="@dimen/dp30"
            android:layout_height="@dimen/dp30"
            android:layout_marginLeft="@dimen/dp8"
            android:text="是"
        />

        <Button
            android:id="@+id/register_btn_cancel"
            style="@style/LoginButtonThemeUc"
            android:layout_width="@dimen/dp30"
            android:layout_height="@dimen/dp30"
            android:layout_marginLeft="@dimen/dp5"
            android:text="否"
        />
        <TextView
            android:id="@+id/register_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp8"
            android:text="@string/register_explain"
            android:textColor="@color/register_tip"
            android:textSize="@dimen/sp15"
        />
    </LinearLayout>
    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp45"
        android:layout_below="@+id/mshell_register_issure"
        android:layout_marginLeft="@dimen/dp8"
        android:layout_marginRight="@dimen/dp8"
        android:layout_marginTop="@dimen/dp30"
        android:background="@drawable/mmain_login_ucbtn"
        android:text="@string/register"
        android:textColor="@color/white"
    />

    <TextView
        android:id="@+id/RegisterExplain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_btn"
        android:layout_marginTop="@dimen/dp8"
        android:gravity="center"
        android:textColor="@color/register_text"
        android:textSize="@dimen/sp15"/>


    <TextView
        android:id="@+id/register_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/register_TechnicalSupport"
        android:layout_marginBottom="@dimen/dp5"
        android:gravity="center"
    />
    <TextView
        android:id="@+id/register_TechnicalSupport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dp8"
        android:gravity="center"
        android:textColor="@color/global_tv_un"
    />
</RelativeLayout>
